--- a/webapi/Connery.Web.csproj
+++ b/webapi/Connery.Web.csproj
@@ -4,5 +4,9 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\lib\Connery.Lib.csproj" />
+  </ItemGroup>
+
 
 </Project>
