Add Swagger and Swagger UI
The Swagger JSON object can be accessed at "swagger/v1/swagger.json".
The Swagger UI can be accessed at "/" (home) path. The Swagger UI can be
used to test any image directly.

--- a/webapi/Connery.WebApi.csproj
+++ b/webapi/Connery.WebApi.csproj
@@ -8,6 +8,10 @@
     <ProjectReference Include="..\lib\Connery.Lib.csproj" />
     <Content Include="MLModel.zip" />
   </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="5.3.1" />
+  </ItemGroup>
   
 
 </Project>
